# Predict_Diabetes_From_BRFSS2015

./: .gitattributes  .gitignore  Journal.md  README.md  config.py  main.py  pyproject.toml
data/: prepare_data.py
data/scripts/: download_data.py  split_data.py  transform_data.py
eda/: eda_three_classes.ipynb
model_training/: base_line_model.ipynb  base_line_model_smote.ipynb  best_model_logreg.ipynb  dt_base_line_model.ipynb  hyperparam_opt_bayesian.ipynb  lgreg_base_line_model_smote.ipynb  multclf_base_line_model_smote.ipynb  multclf_hyperparam_opt_bayesian.ipynb  nn_base_line_model.ipynb  rf_base_line_model.ipynb  rf_base_line_model_smote.ipynb  rf_hyperparam_opt_bayesian.ipynb  rf_hyperparam_opt_bayesian_feateng.ipynb
models/: compare_models.ipynb  create_feature_imp_learning_curves.ipynb
src/: config.py  eda_all_rows.ipynb  model_evaluation.py  transformers.py
