[project]
name = "Predict_Diabetes_From_BRFSS2015"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "keras==3.10.0",
    "matplotlib>=3.10.3",
    "nbstripout>=0.8.1",
    "numpy>=1.26.4",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "ruff>=0.12.0",
    "scikeras==0.13.0",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "tensorflow==2.18.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
